# Carla-ROS2

./: .gitignore  CMakeLists.txt  package.xml  setup.py
LIO-SAM/config/: params.yaml
carla_client/: carla_game.py  command.txt  lanemarkings.py  setup.cfg  setup.py  vehicle_manager.py
carla_client/carla_client/: carla_game.py  lidar_object_detection.py
carla_client/carla_client/controllers/: bev.py  main_controller.py  pid.py  pure_pursuit.py
carla_client/carla_client/lane_detection/: lanedet.py
carla_client/carla_client/object_detection/: .gitignore  gt_bbox.py  objectdet.py  objectdet_config.py  setup.py
carla_client/carla_client/object_detection/pointpillars/model/: __init__.py  anchors.py  pointpillars.py
carla_client/carla_client/object_detection/pointpillars/ops/: iou3d_module.py  voxel_module.py
carla_client/carla_client/object_detection/pointpillars/utils/: io.py  process.py  (+1 more)
carla_client/launch/: carla_game.launch.py  lanedet.launch.py  objectdet.launch.py
carla_client_msgs/: CMakeLists.txt  package.xml
carla_client_msgs/msg/: Lanes.msg  ObjBBox.msg  ObjBBoxArray.msg
launch/: carla_game.launch.py  lanedet.launch.py
lidar_localization_ros2/: command.txt
lidar_localization_ros2/include/lidar_localization/: lidar_localization_component.hpp
lidar_localization_ros2/launch/: lidar_localization.launch.py
lidar_localization_ros2/param/: localization.yaml
lidar_localization_ros2/src/: lidar_localization_component.cpp
src/carla_client/: carla_game.py  vehicle_manager.py
src/carla_client/lane_detection/: backbone.py  lanedet.py  model.py
